--- a/Home_page/fat_secret.html
+++ b/Home_page/fat_secret.html
@@ -75,13 +75,13 @@
           <a href="../food.html">
             <div>FOODS</div>
           </a>
-          <a href="../Recepies-Community/recepies.html">
+          <a href="/Recepies-Community/recepies.html">
             <div>RECIPES</div>
           </a>
           <a href="#">
             <div>FITNESS</div>
           </a>
-          <a href="../Recepies-Community/community.html">
+          <a href="/Recepies-Community/community.html">
             <div>COMMUNITY</div>
           </a>
         </div>
